# cargue_ruaf

./: .flake8  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  FileZilla.xml  FileZilla.xml.example  Instructivo_RUA200AAFP.odt  README.md  SECURITY.md  config.docker.env  config.docker.env.example  config.prod.env  config.prod.env.example  descargar_sftp.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rpa_cargue_ruaf.py  run_rpa.sh  run_ruaf.sh  verify_security.py
.github/workflows/: tests.yml
tests/: __init__.py  conftest.py  test_descargar_sftp.py  test_rpa_cargue_ruaf.py
